# shiro-daemon/src/api.rs
@@ -1142,6 +1142,9 @@ pub fn build_router(
         .routes(routes!(crate::deconstruct::api::list_tasks))
         .routes(routes!(crate::deconstruct::api::get_task))
         .routes(routes!(crate::deconstruct::api::save_task))
+        .routes(routes!(crate::deconstruct::api::get_task_source))
+        .routes(routes!(crate::deconstruct::api::select_segments))
+        .routes(routes!(crate::deconstruct::api::retry_task))
         .routes(routes!(crate::deconstruct::api::delete_task))
         .routes(routes!(crate::model_api::list_profiles))
         .routes(routes!(crate::model_api::upsert_profile))
